# advent

2015/: 1-not-quite-lisp.rkt  2-no-math.rkt  3-houses.rkt  4-stocking-stuffer.rkt  5-intern-elves.rkt  6-fire-hazard.rkt  7-assembly.lisp  7-assembly.rkt  advent.asd
2015/input/: circuit.gv  make-graph.awk
2022/calorie_counting/: mix.exs
2022/camp_cleanup/: mix.exs
2022/no_space/: .gitignore  README.md  mix.exs
2022/roshambo/: mix.exs
2022/rucksack/: mix.exs
2022/supply_stacks/: mix.exs
2022/tuning_trouble/: mix.exs
2023/: README.md
2023/aplenty/: .gitignore  aplenty.rkt
2023/boat_race/: .gitignore  README.md  mix.exs
2023/camel_cards/: .gitignore  mix.exs
2023/clumsy-crucible/: .gitignore  clumsy-crucible.rkt
2023/cosmic-expansion/: .gitignore  cosmic-expansion.rkt
2023/cosmic_expansion/: .gitignore  README.md  mix.exs
2023/cube_conundrum/: .gitignore  mix.exs
2023/gear_ratios/: .gitignore  mix.exs
2023/hot-springs/: hot-springs.rkt
2023/hot_springs/: .gitignore  README.md  mix.exs
2023/lava/: .gitignore  lava.rkt
2023/lavaduct-lagoon/: .gitignore  lavaduct-lagoon.rkt
2023/lens-library/: .gitignore  lens-library.rkt
2023/long-walk/: .gitignore  long-walk.rkt
2023/mirrors/: mirrors.rkt
2023/oasis/: .gitignore  README.md  (+2 more)
aoc2024/: .gitignore  README.md  aoc2024.opam  dune-project
aoc2024/_build/: log
aoc2024/doc/: day05.dot  day05_test.dot  day23-test.dot  day23.dot  day24.dot
aoc2024/input/: 15-boxes.txt  15-empty.txt  24-fix.txt
aoc2024/lib/: day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune  graph.ml  print_utils.ml
aoc2024/lib/utils/: board.ml  coord.ml  debug.ml  dune  grid.ml  io.ml  tuple.ml
aoc2024/test/: dune  test_day01.ml  test_day02.ml  test_day03.ml  test_day04.ml  test_day05.ml  test_day06.ml  test_day07.ml  test_day08.ml  test_day09.ml  test_day10.ml  test_day11.ml  test_day12.ml  test_day13.ml  test_day14.ml  test_day15.ml  test_day16.ml  test_day17.ml  test_day18.ml  test_day19.ml  test_day20.ml  test_day21.ml  test_day22.ml  test_day23.ml  test_day24.ml  test_day25.ml
(+65 files in other folders)
