(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "J. Bromley")

(maintainers "J. Bromley")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "Solutions for Advent of Code 2024")
 (description "Solutions for the Advent of Code 2024 problems in OCaml.")
 (depends ocaml dune)
 (tags
  (topics aoc algorithms)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
