(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github jbromley/advent))

(authors "J. Bromley")

(maintainers "J. Bromley")

(license MIT)

(documentation https://github.com/jbromley/aoc2024/README.md)

(package
 (name aoc2024)
 (synopsis "Solutions for Advent of Code 2024")
 (description "Solutions for the Advent of Code 2024 problems in OCaml.")
 (allow_empty)
 (depends ocaml dune ounit2 aoc)
 (tags
  (topics aoc algorithms)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
