(tests
 (names test_day01 test_day02 test_day03 test_day04 test_day05
        test_day06 test_day07 test_day08 test_day09 test_day10
        test_day11)
 (modules test_day01 test_day02 test_day03 test_day04 test_day05
          test_day06 test_day07 test_day08 test_day09 test_day10
          test_day11)
 (libraries aoc ounit2))
